robotic-codes/src/test/test_addfront.txt
test_addfront.cpp: In function ‘int main()’:
test_addfront.cpp:8:12: error: expected initializer before ‘s1’
   string s s1;
            ^~
test_addfront.cpp:9:3: error: ‘s’ was not declared in this scope
   s = "hello"
   ^
test_addfront.cpp:12:10: error: ‘num’ was not declared in this scope
   cin >> num;
          ^~~
test_addfront.cpp:12:10: note: suggested alternative: ‘enum’
   cin >> num;
          ^~~
          enum
test_addfront.cpp:13:10: error: ‘l’ was not declared in this scope
   cin >> l;
          ^
test_addfront.cpp:14:3: error: ‘s1’ was not declared in this scope
   s1 = addfront(s, l);
   ^~
test_addfront.cpp:14:8: error: ‘addfront’ was not declared in this scope
   s1 = addfront(s, l);
        ^~~~~~~~
test_addfront.cpp:14:8: note: suggested alternative: ‘caddr_t’
   s1 = addfront(s, l);
        ^~~~~~~~
        caddr_t
